--- a/03-08-DOM/index.html
+++ b/03-08-DOM/index.html
@@ -69,7 +69,7 @@
                 </div>
             </div>
         </div>
-        <div class="promo__adv">
+        <div class="promo__adv" id="promo__adv">
             <div class="promo__adv-title">Promo</div>
             <img src="img/content_1.jpg" alt="some picture">
             <img src="img/content_2.jpg" alt="some picture">
